# ycx25-voter

./: .replit  app.py  data_processor.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  utils.py  vite.config.js
attached_assets/: yc_companies_S25.csv
data/: companies.json
frontend/: index.html  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CompanyRow.jsx  CompanyTable.jsx  Footer.jsx  Header.jsx
src/: index.html
static/js/: app.js
templates/: index.html
